# copycut

./: .env  index.css  index.html  package.json  pnpm-lock.yaml  postcss.config.js
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: app.rs  devtools.rs  dir_size.rs  dir_sizer.rs  fs_list.rs  fs_ops.rs  mod.rs  path_sizer.rs  types.rs
src-tauri/src/api/path_sizer/: cache.rs  jobs.rs  keys.rs  mod.rs  worker.rs
src/components/: Modal.tsx  Pane.tsx  TopMenu.tsx
src/components/menu/: MenuSep.tsx
src/components/menus/: ContextMenu.tsx  Menu.tsx  MenuItem.tsx  TopMenu.tsx
src/components/modal/: Modal.tsx  ModalBox.tsx
src/components/modal/utils/: fire.tsx
src/components/table/: ColumnHeaders.tsx  Row.tsx  StatusBar.tsx
src/hooks/: useColumnResize.ts  useContextMenu.ts  useFs.ts  useMultiSelect.ts  usePaneOps.ts  usePaneView.ts  useRename.ts  useSelection.ts
src/hooks/fs/: useFs.ts  useFsHookStart.ts  useFsProgressRefs.ts
src/menus/: ContextMenu.tsx  TopMenu.tsx
src/store/: CommanderContext.tsx
src/types/: ContextMenuItem.ts  FileEntry.ts  ModalTypes.ts  PaneTypes.ts  PathSizerChildEvent.ts  PathSizerProgressEvent.ts  PathSizerSummaryEvent.ts  PathSizerTypes.ts  RowType.ts
src/utils/: fileDataHelpers.ts  fileDataParse.ts  fire.tsx  fsNav.ts  fsOps.ts
